dukpyra-compiler/dukpyra/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> preamble class_definitions endpoints
Rule 2     preamble -> optional_newlines import_stmt app_creation
Rule 3     preamble -> optional_newlines import_stmt
Rule 4     preamble -> optional_newlines
Rule 5     import_stmt -> IMPORT ID NEWLINE optional_newlines
Rule 6     app_creation -> ID EQUALS ID DOT ID LPAREN RPAREN NEWLINE optional_newlines
Rule 7     optional_newlines -> <empty>
Rule 8     optional_newlines -> NEWLINE optional_newlines
Rule 9     class_definitions -> class_definition class_definitions
Rule 10    class_definitions -> <empty>
Rule 11    class_definition -> CLASS ID COLON NEWLINE class_properties
Rule 12    class_properties -> class_property class_properties
Rule 13    class_properties -> class_property
Rule 14    class_property -> ID COLON type_hint NEWLINE
Rule 15    endpoints -> endpoint endpoints
Rule 16    endpoints -> endpoint
Rule 17    endpoint -> raw_decorator decorator function_def
Rule 18    endpoint -> decorator function_def
Rule 19    raw_decorator -> AT ID DOT ID LPAREN STRING RPAREN NEWLINE
Rule 20    decorator -> AT ID DOT GET LPAREN STRING RPAREN NEWLINE
Rule 21    decorator -> AT ID DOT POST LPAREN STRING RPAREN NEWLINE
Rule 22    decorator -> AT ID DOT PUT LPAREN STRING RPAREN NEWLINE
Rule 23    decorator -> AT ID DOT DELETE LPAREN STRING RPAREN NEWLINE
Rule 24    decorator -> AT ID DOT PATCH LPAREN STRING RPAREN NEWLINE
Rule 25    function_def -> DEF ID LPAREN params RPAREN COLON NEWLINE RETURN expression NEWLINE
Rule 26    function_def -> DEF ID LPAREN RPAREN COLON NEWLINE RETURN expression NEWLINE
Rule 27    params -> param COMMA params
Rule 28    params -> param
Rule 29    param -> ID COLON type_hint
Rule 30    param -> ID
Rule 31    type_hint -> TYPE_INT
Rule 32    type_hint -> TYPE_STR
Rule 33    type_hint -> TYPE_FLOAT
Rule 34    type_hint -> TYPE_BOOL
Rule 35    type_hint -> ID
Rule 36    expression -> STRING
Rule 37    expression -> NUMBER
Rule 38    expression -> LBRACE dict_items RBRACE
Rule 39    expression -> LBRACE RBRACE
Rule 40    expression -> LBRACKET list_items RBRACKET
Rule 41    expression -> LBRACKET RBRACKET
Rule 42    list_items -> expression COMMA list_items
Rule 43    list_items -> expression
Rule 44    expression -> ID
Rule 45    expression -> ID DOT ID
Rule 46    expression -> TRUE
Rule 47    expression -> FALSE
Rule 48    expression -> NONE
Rule 49    dict_items -> dict_item COMMA dict_items
Rule 50    dict_items -> dict_item
Rule 51    dict_item -> STRING COLON expression

Terminals, with rules where they appear

AT                   : 19 20 21 22 23 24
CLASS                : 11
COLON                : 11 14 25 26 29 51
COMMA                : 27 42 49
DEF                  : 25 26
DELETE               : 23
DOT                  : 6 19 20 21 22 23 24 45
EQUALS               : 6
FALSE                : 47
GET                  : 20
ID                   : 5 6 6 6 11 14 19 19 20 21 22 23 24 25 26 29 30 35 44 45 45
IMPORT               : 5
LBRACE               : 38 39
LBRACKET             : 40 41
LPAREN               : 6 19 20 21 22 23 24 25 26
NEWLINE              : 5 6 8 11 14 19 20 21 22 23 24 25 25 26 26
NONE                 : 48
NUMBER               : 37
PATCH                : 24
POST                 : 21
PUT                  : 22
RBRACE               : 38 39
RBRACKET             : 40 41
RETURN               : 25 26
RPAREN               : 6 19 20 21 22 23 24 25 26
STRING               : 19 20 21 22 23 24 36 51
TRUE                 : 46
TYPE_BOOL            : 34
TYPE_FLOAT           : 33
TYPE_INT             : 31
TYPE_STR             : 32
error                : 

Nonterminals, with rules where they appear

app_creation         : 2
class_definition     : 9
class_definitions    : 1 9
class_properties     : 11 12
class_property       : 12 13
decorator            : 17 18
dict_item            : 49 50
dict_items           : 38 49
endpoint             : 15 16
endpoints            : 1 15
expression           : 25 26 42 43 51
function_def         : 17 18
import_stmt          : 2 3
list_items           : 40 42
optional_newlines    : 2 3 4 5 6 8
param                : 27 28
params               : 25 27
preamble             : 1
program              : 0
raw_decorator        : 17
type_hint            : 14 29

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . preamble class_definitions endpoints
    (2) preamble -> . optional_newlines import_stmt app_creation
    (3) preamble -> . optional_newlines import_stmt
    (4) preamble -> . optional_newlines
    (7) optional_newlines -> .
    (8) optional_newlines -> . NEWLINE optional_newlines

    IMPORT          reduce using rule 7 (optional_newlines -> .)
    CLASS           reduce using rule 7 (optional_newlines -> .)
    AT              reduce using rule 7 (optional_newlines -> .)
    NEWLINE         shift and go to state 4

    program                        shift and go to state 1
    preamble                       shift and go to state 2
    optional_newlines              shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> preamble . class_definitions endpoints
    (9) class_definitions -> . class_definition class_definitions
    (10) class_definitions -> .
    (11) class_definition -> . CLASS ID COLON NEWLINE class_properties

    AT              reduce using rule 10 (class_definitions -> .)
    CLASS           shift and go to state 7

    class_definitions              shift and go to state 5
    class_definition               shift and go to state 6

state 3

    (2) preamble -> optional_newlines . import_stmt app_creation
    (3) preamble -> optional_newlines . import_stmt
    (4) preamble -> optional_newlines .
    (5) import_stmt -> . IMPORT ID NEWLINE optional_newlines

    CLASS           reduce using rule 4 (preamble -> optional_newlines .)
    AT              reduce using rule 4 (preamble -> optional_newlines .)
    IMPORT          shift and go to state 9

    import_stmt                    shift and go to state 8

state 4

    (8) optional_newlines -> NEWLINE . optional_newlines
    (7) optional_newlines -> .
    (8) optional_newlines -> . NEWLINE optional_newlines

    IMPORT          reduce using rule 7 (optional_newlines -> .)
    CLASS           reduce using rule 7 (optional_newlines -> .)
    AT              reduce using rule 7 (optional_newlines -> .)
    ID              reduce using rule 7 (optional_newlines -> .)
    NEWLINE         shift and go to state 4

    optional_newlines              shift and go to state 10

state 5

    (1) program -> preamble class_definitions . endpoints
    (15) endpoints -> . endpoint endpoints
    (16) endpoints -> . endpoint
    (17) endpoint -> . raw_decorator decorator function_def
    (18) endpoint -> . decorator function_def
    (19) raw_decorator -> . AT ID DOT ID LPAREN STRING RPAREN NEWLINE
    (20) decorator -> . AT ID DOT GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> . AT ID DOT POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> . AT ID DOT PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> . AT ID DOT DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> . AT ID DOT PATCH LPAREN STRING RPAREN NEWLINE

    AT              shift and go to state 15

    endpoints                      shift and go to state 11
    endpoint                       shift and go to state 12
    raw_decorator                  shift and go to state 13
    decorator                      shift and go to state 14

state 6

    (9) class_definitions -> class_definition . class_definitions
    (9) class_definitions -> . class_definition class_definitions
    (10) class_definitions -> .
    (11) class_definition -> . CLASS ID COLON NEWLINE class_properties

    AT              reduce using rule 10 (class_definitions -> .)
    CLASS           shift and go to state 7

    class_definition               shift and go to state 6
    class_definitions              shift and go to state 16

state 7

    (11) class_definition -> CLASS . ID COLON NEWLINE class_properties

    ID              shift and go to state 17


state 8

    (2) preamble -> optional_newlines import_stmt . app_creation
    (3) preamble -> optional_newlines import_stmt .
    (6) app_creation -> . ID EQUALS ID DOT ID LPAREN RPAREN NEWLINE optional_newlines

    CLASS           reduce using rule 3 (preamble -> optional_newlines import_stmt .)
    AT              reduce using rule 3 (preamble -> optional_newlines import_stmt .)
    ID              shift and go to state 19

    app_creation                   shift and go to state 18

state 9

    (5) import_stmt -> IMPORT . ID NEWLINE optional_newlines

    ID              shift and go to state 20


state 10

    (8) optional_newlines -> NEWLINE optional_newlines .

    IMPORT          reduce using rule 8 (optional_newlines -> NEWLINE optional_newlines .)
    CLASS           reduce using rule 8 (optional_newlines -> NEWLINE optional_newlines .)
    AT              reduce using rule 8 (optional_newlines -> NEWLINE optional_newlines .)
    ID              reduce using rule 8 (optional_newlines -> NEWLINE optional_newlines .)


state 11

    (1) program -> preamble class_definitions endpoints .

    $end            reduce using rule 1 (program -> preamble class_definitions endpoints .)


state 12

    (15) endpoints -> endpoint . endpoints
    (16) endpoints -> endpoint .
    (15) endpoints -> . endpoint endpoints
    (16) endpoints -> . endpoint
    (17) endpoint -> . raw_decorator decorator function_def
    (18) endpoint -> . decorator function_def
    (19) raw_decorator -> . AT ID DOT ID LPAREN STRING RPAREN NEWLINE
    (20) decorator -> . AT ID DOT GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> . AT ID DOT POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> . AT ID DOT PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> . AT ID DOT DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> . AT ID DOT PATCH LPAREN STRING RPAREN NEWLINE

    $end            reduce using rule 16 (endpoints -> endpoint .)
    AT              shift and go to state 15

    endpoint                       shift and go to state 12
    endpoints                      shift and go to state 21
    raw_decorator                  shift and go to state 13
    decorator                      shift and go to state 14

state 13

    (17) endpoint -> raw_decorator . decorator function_def
    (20) decorator -> . AT ID DOT GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> . AT ID DOT POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> . AT ID DOT PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> . AT ID DOT DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> . AT ID DOT PATCH LPAREN STRING RPAREN NEWLINE

    AT              shift and go to state 23

    decorator                      shift and go to state 22

state 14

    (18) endpoint -> decorator . function_def
    (25) function_def -> . DEF ID LPAREN params RPAREN COLON NEWLINE RETURN expression NEWLINE
    (26) function_def -> . DEF ID LPAREN RPAREN COLON NEWLINE RETURN expression NEWLINE

    DEF             shift and go to state 25

    function_def                   shift and go to state 24

state 15

    (19) raw_decorator -> AT . ID DOT ID LPAREN STRING RPAREN NEWLINE
    (20) decorator -> AT . ID DOT GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> AT . ID DOT POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> AT . ID DOT PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> AT . ID DOT DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> AT . ID DOT PATCH LPAREN STRING RPAREN NEWLINE

    ID              shift and go to state 26


state 16

    (9) class_definitions -> class_definition class_definitions .

    AT              reduce using rule 9 (class_definitions -> class_definition class_definitions .)


state 17

    (11) class_definition -> CLASS ID . COLON NEWLINE class_properties

    COLON           shift and go to state 27


state 18

    (2) preamble -> optional_newlines import_stmt app_creation .

    CLASS           reduce using rule 2 (preamble -> optional_newlines import_stmt app_creation .)
    AT              reduce using rule 2 (preamble -> optional_newlines import_stmt app_creation .)


state 19

    (6) app_creation -> ID . EQUALS ID DOT ID LPAREN RPAREN NEWLINE optional_newlines

    EQUALS          shift and go to state 28


state 20

    (5) import_stmt -> IMPORT ID . NEWLINE optional_newlines

    NEWLINE         shift and go to state 29


state 21

    (15) endpoints -> endpoint endpoints .

    $end            reduce using rule 15 (endpoints -> endpoint endpoints .)


state 22

    (17) endpoint -> raw_decorator decorator . function_def
    (25) function_def -> . DEF ID LPAREN params RPAREN COLON NEWLINE RETURN expression NEWLINE
    (26) function_def -> . DEF ID LPAREN RPAREN COLON NEWLINE RETURN expression NEWLINE

    DEF             shift and go to state 25

    function_def                   shift and go to state 30

state 23

    (20) decorator -> AT . ID DOT GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> AT . ID DOT POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> AT . ID DOT PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> AT . ID DOT DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> AT . ID DOT PATCH LPAREN STRING RPAREN NEWLINE

    ID              shift and go to state 31


state 24

    (18) endpoint -> decorator function_def .

    AT              reduce using rule 18 (endpoint -> decorator function_def .)
    $end            reduce using rule 18 (endpoint -> decorator function_def .)


state 25

    (25) function_def -> DEF . ID LPAREN params RPAREN COLON NEWLINE RETURN expression NEWLINE
    (26) function_def -> DEF . ID LPAREN RPAREN COLON NEWLINE RETURN expression NEWLINE

    ID              shift and go to state 32


state 26

    (19) raw_decorator -> AT ID . DOT ID LPAREN STRING RPAREN NEWLINE
    (20) decorator -> AT ID . DOT GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> AT ID . DOT POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> AT ID . DOT PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> AT ID . DOT DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> AT ID . DOT PATCH LPAREN STRING RPAREN NEWLINE

    DOT             shift and go to state 33


state 27

    (11) class_definition -> CLASS ID COLON . NEWLINE class_properties

    NEWLINE         shift and go to state 34


state 28

    (6) app_creation -> ID EQUALS . ID DOT ID LPAREN RPAREN NEWLINE optional_newlines

    ID              shift and go to state 35


state 29

    (5) import_stmt -> IMPORT ID NEWLINE . optional_newlines
    (7) optional_newlines -> .
    (8) optional_newlines -> . NEWLINE optional_newlines

    ID              reduce using rule 7 (optional_newlines -> .)
    CLASS           reduce using rule 7 (optional_newlines -> .)
    AT              reduce using rule 7 (optional_newlines -> .)
    NEWLINE         shift and go to state 4

    optional_newlines              shift and go to state 36

state 30

    (17) endpoint -> raw_decorator decorator function_def .

    AT              reduce using rule 17 (endpoint -> raw_decorator decorator function_def .)
    $end            reduce using rule 17 (endpoint -> raw_decorator decorator function_def .)


state 31

    (20) decorator -> AT ID . DOT GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> AT ID . DOT POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> AT ID . DOT PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> AT ID . DOT DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> AT ID . DOT PATCH LPAREN STRING RPAREN NEWLINE

    DOT             shift and go to state 37


state 32

    (25) function_def -> DEF ID . LPAREN params RPAREN COLON NEWLINE RETURN expression NEWLINE
    (26) function_def -> DEF ID . LPAREN RPAREN COLON NEWLINE RETURN expression NEWLINE

    LPAREN          shift and go to state 38


state 33

    (19) raw_decorator -> AT ID DOT . ID LPAREN STRING RPAREN NEWLINE
    (20) decorator -> AT ID DOT . GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> AT ID DOT . POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> AT ID DOT . PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> AT ID DOT . DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> AT ID DOT . PATCH LPAREN STRING RPAREN NEWLINE

    ID              shift and go to state 39
    GET             shift and go to state 40
    POST            shift and go to state 41
    PUT             shift and go to state 42
    DELETE          shift and go to state 43
    PATCH           shift and go to state 44


state 34

    (11) class_definition -> CLASS ID COLON NEWLINE . class_properties
    (12) class_properties -> . class_property class_properties
    (13) class_properties -> . class_property
    (14) class_property -> . ID COLON type_hint NEWLINE

    ID              shift and go to state 45

    class_properties               shift and go to state 46
    class_property                 shift and go to state 47

state 35

    (6) app_creation -> ID EQUALS ID . DOT ID LPAREN RPAREN NEWLINE optional_newlines

    DOT             shift and go to state 48


state 36

    (5) import_stmt -> IMPORT ID NEWLINE optional_newlines .

    ID              reduce using rule 5 (import_stmt -> IMPORT ID NEWLINE optional_newlines .)
    CLASS           reduce using rule 5 (import_stmt -> IMPORT ID NEWLINE optional_newlines .)
    AT              reduce using rule 5 (import_stmt -> IMPORT ID NEWLINE optional_newlines .)


state 37

    (20) decorator -> AT ID DOT . GET LPAREN STRING RPAREN NEWLINE
    (21) decorator -> AT ID DOT . POST LPAREN STRING RPAREN NEWLINE
    (22) decorator -> AT ID DOT . PUT LPAREN STRING RPAREN NEWLINE
    (23) decorator -> AT ID DOT . DELETE LPAREN STRING RPAREN NEWLINE
    (24) decorator -> AT ID DOT . PATCH LPAREN STRING RPAREN NEWLINE

    GET             shift and go to state 40
    POST            shift and go to state 41
    PUT             shift and go to state 42
    DELETE          shift and go to state 43
    PATCH           shift and go to state 44


state 38

    (25) function_def -> DEF ID LPAREN . params RPAREN COLON NEWLINE RETURN expression NEWLINE
    (26) function_def -> DEF ID LPAREN . RPAREN COLON NEWLINE RETURN expression NEWLINE
    (27) params -> . param COMMA params
    (28) params -> . param
    (29) param -> . ID COLON type_hint
    (30) param -> . ID

    RPAREN          shift and go to state 51
    ID              shift and go to state 49

    params                         shift and go to state 50
    param                          shift and go to state 52

state 39

    (19) raw_decorator -> AT ID DOT ID . LPAREN STRING RPAREN NEWLINE

    LPAREN          shift and go to state 53


state 40

    (20) decorator -> AT ID DOT GET . LPAREN STRING RPAREN NEWLINE

    LPAREN          shift and go to state 54


state 41

    (21) decorator -> AT ID DOT POST . LPAREN STRING RPAREN NEWLINE

    LPAREN          shift and go to state 55


state 42

    (22) decorator -> AT ID DOT PUT . LPAREN STRING RPAREN NEWLINE

    LPAREN          shift and go to state 56


state 43

    (23) decorator -> AT ID DOT DELETE . LPAREN STRING RPAREN NEWLINE

    LPAREN          shift and go to state 57


state 44

    (24) decorator -> AT ID DOT PATCH . LPAREN STRING RPAREN NEWLINE

    LPAREN          shift and go to state 58


state 45

    (14) class_property -> ID . COLON type_hint NEWLINE

    COLON           shift and go to state 59


state 46

    (11) class_definition -> CLASS ID COLON NEWLINE class_properties .

    CLASS           reduce using rule 11 (class_definition -> CLASS ID COLON NEWLINE class_properties .)
    AT              reduce using rule 11 (class_definition -> CLASS ID COLON NEWLINE class_properties .)


state 47

    (12) class_properties -> class_property . class_properties
    (13) class_properties -> class_property .
    (12) class_properties -> . class_property class_properties
    (13) class_properties -> . class_property
    (14) class_property -> . ID COLON type_hint NEWLINE

    CLASS           reduce using rule 13 (class_properties -> class_property .)
    AT              reduce using rule 13 (class_properties -> class_property .)
    ID              shift and go to state 45

    class_property                 shift and go to state 47
    class_properties               shift and go to state 60

state 48

    (6) app_creation -> ID EQUALS ID DOT . ID LPAREN RPAREN NEWLINE optional_newlines

    ID              shift and go to state 61


state 49

    (29) param -> ID . COLON type_hint
    (30) param -> ID .

    COLON           shift and go to state 62
    COMMA           reduce using rule 30 (param -> ID .)
    RPAREN          reduce using rule 30 (param -> ID .)


state 50

    (25) function_def -> DEF ID LPAREN params . RPAREN COLON NEWLINE RETURN expression NEWLINE

    RPAREN          shift and go to state 63


state 51

    (26) function_def -> DEF ID LPAREN RPAREN . COLON NEWLINE RETURN expression NEWLINE

    COLON           shift and go to state 64


state 52

    (27) params -> param . COMMA params
    (28) params -> param .

    COMMA           shift and go to state 65
    RPAREN          reduce using rule 28 (params -> param .)


state 53

    (19) raw_decorator -> AT ID DOT ID LPAREN . STRING RPAREN NEWLINE

    STRING          shift and go to state 66


state 54

    (20) decorator -> AT ID DOT GET LPAREN . STRING RPAREN NEWLINE

    STRING          shift and go to state 67

